--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,7 +15,8 @@
      limitations under the License.
 -->
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#3E3E3E</color>
+    <color name="colorPrimaryDark">#1D1D1D</color>
+    <color name="colorAccent">#5C5C5C</color>
+    <color name="white">#FFFFFF</color>
 </resources>
